[project]
name = "omni_directional_img_utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "naoki", email = "katsudanaoki@gmail.com" }
]

requires-python = ">=3.14"
dependencies = [
 "numpy>=2.4.2",
 "opencv-python>=4.13.0.92",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omni_directional_img_utils"]
