[project]
name = "omni_directional_img_utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "naoki", email = "katsudanaoki@gmail.com" }
]

requires-python = ">=3.12"
dependencies = [
 "numpy",
 "opencv-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omni_directional_img_utils"]

[tool.uv.sources]
img-utils = { git = "https://github.com/kattsunnn/img_utils.git" }

[dependency-groups]
dev = [
    "click>=8.3.1",
    "img-utils",
]
